2004-09-07  John W. Eaton  <jwe@octave.org>

	* data-conv.cc (oct_data_conv::string_to_data_type): Handle dt_logical.
	(oct_data_conv::data_type_as_string): Likewise.

	* data-conv.h (oct_data_conv::data_type): Add dt_logical to list.

	* Range.cc (round): Delete unused function.

	* lo-mappers.cc (xround): Rename from round.  Change all uses.
	If HAVE_ROUND, call round, otherwise fake with floor and ceil.

	* oct-inttypes.h: Include <cmath> here.

2004-09-03  David Bateman  <dbateman@free.fr>

	* boolNDArray.cc (boolNDArray::concat, boolNDArray::insert):
	New functions for boolean matrix concatenation.
	* boolNDArray.h: Provide decls.

2004-09-03  John W. Eaton  <jwe@octave.org>

	* oct-inttpes.h (OCTAVE_INT_CMP_OP): Convert operarands to double
	to avoid signed/unsigned int comparison problems.

	* mx-ops: Generate CMP and BOOL ops for mixed integer types and
	for mixed integer and double types.

	* mk-ops.awk: Output BIN_OP_DECLS, CMP_OP_DECLS, and BOOL_OP_DECLS
	separately, and only if needed.

	* oct-inttypes.h (octave_fit_to_range): Use constructor instead of
	static_cast for type conversion.

2004-09-01  John W. Eaton  <jwe@octave.org>

	* oct-inttypes.h (pow, operator +, operator -, operator *,
	operator /): Handle mixed integer/double ops.  If op generates a
	NaN, set result to 0.
	(octave_int::operator - (void)): Convert to double, then negate,
	then fit to range.

	* mx-ops: Define integer types.  Include declarations for mixed
	integer/double ops.

2004-08-31  John W. Eaton  <jwe@octave.org>

	* oct-inttypes.h (pow): Args now const reference.
	(octave_int<T>::operator *=, octave_int<T>::operator /=,
	octave_int<T>::operator <<=, octave_int<T>::operator >>=):
	New member functions.
	(OCTAVE_INT_BITSHIFT_OP): Delete macro.
	(operator >> (const octave_int<T1>& x, const T2& y)):
	Define in terms of >>=.
	(operator << (const octave_int<T1>& x, const T2& y)):
	Define in terms of <<=.
	(bitshift): Operate on octave_int<T> objects, not the values, so